commit fix and tras... español

--- a/en/edit-modes/README.html
+++ b/en/edit-modes/README.html
@@ -15,7 +15,7 @@ Edit modes supply Sanny Builder with the following information:
 
 * a target game
 * paths to files with the game data
-* paths to files with supporting information ([labels](customlabels.ini.md), [variables](./#variables), [constants](./#constants), etc)
+* paths to files with supporting information ([labels](customlabels.ini.md), [variables](README.md#variables), [constants](README.md#constants), etc)
 
 By default Sanny Builder reads the modes configuration from the file `&lt;SB&gt;\data\modes.xml`. This path can be customized via the `-x` CLI [option](../editor/cli.md#x).
 
@@ -166,7 +166,7 @@ path to [`opcodes.txt`](../editor/opcode-search-tool.md)
 
 #### `library`
 
-path to a JSON file generated in [Sanny Builder Library](../editor/features.md#integration-with-sanny-builder-library) with documentation on the scripting commands used in the target [game](./#game).
+path to a JSON file generated in [Sanny Builder Library](../editor/features.md#integration-with-sanny-builder-library) with documentation on the scripting commands used in the target [game](README.md#game).
 
 ### Built-in Variables
 
