--- a/en/edit-modes/code-templates.html
+++ b/en/edit-modes/code-templates.html
@@ -21,7 +21,7 @@ end // for
 
 ## Types of Templates
 
-There are two types of templates: _shared_ and _exclusive_. Shared templates are available across all [edit modes](README.md). They are contained in the file `data\templates.txt`. Exclusive templates are designed specifically for the current edit mode. A path to the exclusive template file can be customized with the [`template`](README.md/#templates) key in the `modes.xml`:
+There are two types of templates: *shared* and *exclusive*. Shared templates are available across all [edit modes](README.md). They are contained in the file `data\templates.txt`. Exclusive templates are designed specifically for the current edit mode. A path to the exclusive template file can be customized with the [`template`](README.md/#templates) key in the `modes.xml`:
 
 ```
 &lt;templates type="default">@sb:\data\gta3\templates.txt&lt;/templates>
@@ -44,7 +44,7 @@ It's also possible to add a new template from the editor. Select the code and cl
 
 Enter a name of the template, a description (optionally) in the dialog window, choose the type of the template, and press the `OK` button. The template is ready to use. 
 
-Custom templates are saved in either `data\templates.custom.txt` (_custom shared templates_) or in `data\&lt;edit mode>\templates.custom.txt`(_custom exclusive templates_). The latter can be customized in the [modes configuration](./#templates).
+Custom templates are saved in either `data\templates.custom.txt` (*custom shared templates*) or in `data\&lt;edit mode>\templates.custom.txt`(*custom exclusive templates*). The latter can be customized in the [modes configuration](README.md#templates).
 
 {% hint style="info" %}
 The option to save a template only for current mode becomes available if `modes.xml` has a file path defined in `&lt;template type="custom">`tag.
