--- a/en/edit-modes/enums.txt.html
+++ b/en/edit-modes/enums.txt.html
@@ -13,7 +13,7 @@ An **enumerated type** or **enum** is a finite set of constants (called _enum fi
 
 Enumerated types have a few advantages over ordinary constants. They don't pollute the global namespace and are the first-class citizens in the type system. Parameters with an enumerated type are limited on allowed values range which in turn helps to avoid errors caused by an invalid id usage.
 
-**Enums.txt** is a text file that defines a list of the enumerated types available in the [edit mode](./).
+**Enums.txt** is a text file that defines a list of the enumerated types available in the [edit mode](README.md).
 
 ## File Format
 
