--- a/en/errors.html
+++ b/en/errors.html
@@ -116,9 +116,9 @@ Sanny Builder can't find [the opcodes definitions file](edit-modes/opcodes-list-
 
 #### [0002][]0002: Unknown array type
 
-The disassembler can't recognize the type of an [array](../../coding/arrays.md) in a script file. It may happen because of wrong compilation.
+The disassembler can't recognize the type of an [array](coding/arrays.md) in a script file. It may happen because of wrong compilation.
 
-**Possible solutions:** enable [debug option](../../editor/console.md#ignore_unknown) `IGNORE_UNKNOWN`.
+**Possible solutions:** enable [debug option](editor/console.md#ignore_unknown) `IGNORE_UNKNOWN`.
 
 
 <script src="../js/main.min.js"></script>
