--- a/en/edit-modes/customlabels.ini.html
+++ b/en/edit-modes/customlabels.ini.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-You can give labels custom names that do not depend on the disassembler [configuration](../editor/options/formats.md#label-name-format). Those names are defined in the file `CustomLabels.ini` (one for each [edit mode](./#labels)).
+You can give labels custom names that do not depend on the disassembler [configuration](../editor/options/formats.md#label-name-format). Those names are defined in the file `CustomLabels.ini` (one for each [edit mode](README.md#labels)).
 
 ## File Syntax
 
